--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@
     transform: translate(-50%, -50%);
     max-width: 100%;
     max-height: 100%;
+
+    font-family: 'Creepster', cursive;
+
 }
 
-#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big, #fire {
+#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big, #fire, #collision_animation, #lives {
     display: none;
 }
